--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon-v2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ModuleSpace</title>
+    <!-- Favicon cache bust redeploy -->
   </head>
   <body>
     <div id="app"></div>
